# NCU-RS5046-GP5024--Environmental-data-science-project

./: .gitignore  README.md  pyproject.toml
environmental_data_science_project/: download copy.py  download.py  resnet_18_submission.csv  single-modality-baseline-with-landsat-data.ipynb
