[tool.poetry]
name = "environmental-data-science-project"
version = "0.1.0"
description = ""
authors = ["pcayetan <po.cayetanot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.7.4.5"
ipykernel = "^6.29.5"
torch = "^2.7.0"
numpy = "^2.2.6"
pandas = "^2.2.3"
torchvision = "^0.22.0"
scikit-learn = "^1.6.1"
nbstripout = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
